2002-01-07  Erez Zadok  <ezk@whitestar.dyn.optonline.net>

	* doc/Makefile.am: define @SET_MAKE@ for AC_PROG_MAKE_SET macro, since
	this Makefile could explicitly chdir to other directories and run
	make there.
	(install-ps): use ${MAKE} with ${MFLAGS}.

	* Makefile.am (EXTRA_DIST_AUX): distribute new package_*.m4 files.
	Define @SET_MAKE@ for AC_PROG_MAKE_SET macro, since this Makefile
	could explicitly chdir to other directories and run make there.
	(install-snapshot): use ${MAKE} ${MFLAGS}, not hardcoded "make".

	* configure.in: call AC_PROG_MAKE_SET to check if make program
	defines $MAKE variable.

	* amd/get_args.c (get_version_string): use new PACKAGE_* macros
	and also report the bug-reporting address.

	* aux/macros/package_{name,version}.m4, header_templates.m4: using
	new PACKAGE_{NAME,VERSION,BUGREPORT} macros.

	* aux/macros/name_bugreport.m4: simple macro to print out the
	bug-reporting address which was configured in AC_INIT.

	* bootstrap: remove new autoconf messages about misuse of
	m4_patsubst and m4_regexp (internal GNU M4 macros).

	* configure.in: remove old comment above AC_OUTPUT.
	Use AC_CONFIG_FILES and AC_OUTPUT separately.
	Fix AC_REVISION use.
	Add AC_COPYRIGHT.
	Use new style for AC_INIT, listing package name, version, and
	bug-reporting address.
	Call new AMU_PACKAGE_* macros.

	* updated copyright year to 2002 on all files

	* configure.in: using newly renamed am-utils macros (AMU_*)

	* aux/macros/*.m4: renamed ALL am-utils specific macros so they
	start with AMU_*, not AC_*.  That way it is easier to distinguish
	between macros that come with am-utils and those that are part of
	Autoconf or Automake.  It helps to identify those am-utils macros
	that can be removed once there is generic support for them in a
	future version of Autoconf.

	* bootstrap: run automake --copy
	remove autom4te.cache dir before rerunning autoconf

2001-12-13  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>
