@@ -133,6 +133,7 @@ go back to my email
 apply patches from debian person
 prepend "+" to getopt string patch
 configure.in:
+	copy new Autotools to shekel's ftp site.
 	use HAVE_MEMBERS not my own struct-field finding stuff
 	"make html" target generated automatically?
 	use latest texi2html NOT what's in agora:/usr/local/gnu/bin
@@ -149,6 +150,6 @@ configure.in:
 	--with-hesiod           enable `echo hesiod|tr
 		'abcdefghijklmnopqrstuvwxyz' 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'`
 		support (by default, enabled) 
-	remove %W% and such, fix $Id: tasks,v 1.85 2002/01/07 08:07:34 ezk Exp $ in am_utils.h and friends
+	remove %W% and such, fix $Id: tasks,v 1.86 2002/01/08 07:35:58 ezk Exp $ in am_utils.h and friends
 	remove all changequote entries in macros b/c of [patt]
 
